Commit[004]: Image and color button changed

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
       <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full"
-        src="https://scontent.fgdl5-1.fna.fbcdn.net/v/t1.6435-9/62268370_2202111079906433_3787337474833907712_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeGeHusVvWtNr0h48qJ470_9A8KgABMlQD8DwqAAEyVAPxCUh5rp6TFAzlXaj7WwmXgZvOtK1p3MUnidWgyvgbGz&_nc_ohc=4FGUvqUYYRwAX-ZxRI2&_nc_ht=scontent.fgdl5-1.fna&oh=00_AfAdAOrK_7WDehKZT8Vd43F5vSpNl7RkL6xZuoauE66szA&oe=63A4BF89" alt="">
+        src="https://images2.alphacoders.com/539/53910.jpg" alt="">
     </div>
   </div>
   <div class="bg-white">
@@ -62,11 +62,10 @@
   
       </div>
 
-     <div class="my-6 flex justify-evenly">
-      <button id="returnButton" class="bg-blue-700 px-4 py-2 rounded-lg text-white flex items-center justify-center"><</button>
-      <span class="text-5xl flex text-blue-500 items-center justify-center">. . .</span>
-      <button id="nextButton" class="bg-blue-700 px-4 py-2 rounded-lg text-white flex items-center justify-center">></button>
-      
+     <div class="my-10 flex justify-evenly">
+      <button id="returnButton" class="bg-indigo-700 px-4 py-2 rounded-lg text-white flex items-center justify-center"><</button>
+      <span class="text-5xl flex text-indigo-500 items-center justify-center">. . .</span>
+      <button id="nextButton" class="bg-indigo-700 px-4 py-2 rounded-lg text-white flex items-center justify-center">></button>
     </div>
 
     </div>
