--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
     </div>
   </div>
 
-  <script src="assets/main.js"></script>
+  <script src="assets/main.js" type="module"></script>
 </body>
 
 </html>
